[gd_scene load_steps=9 format=3 uid="uid://k0stbi73k6g"]

[ext_resource type="Script" uid="uid://beylf2umg6oyn" path="res://scripts/enemy.gd" id="1_sxam2"]
[ext_resource type="Material" uid="uid://cmksacprq7g8y" path="res://assets/materials/cell_shader_material.tres" id="2_3sg7k"]
[ext_resource type="Resource" uid="uid://oojd74siic2v" path="res://resources/configs/white_cell_shader_config.tres" id="2_mmiis"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mmiis"]
material = ExtResource("2_3sg7k")
height = 1.8

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_3sg7k"]
points = PackedVector3Array(-0.75, -0.4, -0.5, -0.75, 0.4, -0.5, 0.75, -0.4, -0.5, -0.75, -0.4, 0.5, -0.75, 0.4, 0.5, 0.75, 0.4, -0.5, 0.75, -0.4, 0.5, 0.75, 0.4, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sxam2"]
transparency = 1
blend_mode = 1
diffuse_mode = 3
specular_mode = 2
albedo_color = Color(0, 0, 0, 1)
metallic_specular = 0.0
emission_enabled = true
emission = Color(0.135012, 0.135012, 0.135012, 1)
disable_receive_shadows = true

[sub_resource type="CylinderMesh" id="CylinderMesh_enki8"]
material = SubResource("StandardMaterial3D_sxam2")
bottom_radius = 3.0
height = 4.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_mmiis"]
points = PackedVector3Array(0, -2, -3, -0.294244, -2, -2.9859, -0.245497, -1.20008, -2.48845, 0, -0.400157, -2.00039, 0.24491, -1.20008, -2.48845, 0.293657, -2, -2.9859, -0.585552, -2, -2.94244, -0.0493343, 2, -0.498042, 0, 2, -0.500391, 0.0487471, 2, -0.498042, 0.584965, -2, -2.94244, -0.435787, 0.399765, -1.43598, -0.145654, 2, -0.478661, -0.0980814, 2, -0.490407, -0.870987, -2, -2.87138, 0.0974941, 2, -0.490407, 0.4352, 0.399765, -1.43598, 0.870399, -2, -2.87138, 0.145066, 2, -0.478661, -0.765857, -0.400157, -1.84828, -0.382929, 1.19969, -0.924432, -0.191464, 2, -0.462216, -1.1482, -2, -2.77212, 0.76527, -0.400157, -1.84828, 1.14761, -2, -2.77212, 0.190877, 2, -0.462216, 0.382341, 1.19969, -0.924432, -1.17874, -1.20008, -2.20536, -0.2361, 2, -0.441073, -0.943226, -0.400157, -1.76429, -1.41425, -2, -2.64585, 1.17815, -1.20008, -2.20536, 1.41366, -2, -2.64585, 0.235513, 2, -0.441073, 0.942639, -0.400157, -1.76429, -1.6668, -2, -2.49491, -0.2778, 2, -0.415818, 1.66621, -2, -2.49491, 0.277212, 2, -0.415818, -1.90348, -2, -2.3193, -0.317737, 2, -0.38704, 1.9029, -2, -2.3193, 0.31715, 2, -0.38704, -2.12138, -2, -2.12138, -0.353563, 2, -0.353563, 2.12079, -2, -2.12138, 0.352976, 2, -0.353563, -2.3193, -2, -1.90348, -0.38704, 2, -0.317737, 2.31872, -2, -1.90348, 0.386453, 2, -0.317737, -2.49491, -2, -1.6668, -0.415818, 2, -0.2778, 2.49432, -2, -1.6668, 0.415231, 2, -0.2778, -2.64585, -2, -1.41425, -2.20536, -1.20008, -1.17874, -1.76429, -0.400157, -0.943226, -0.441073, 2, -0.2361, 1.7637, -0.400157, -0.943226, 2.20478, -1.20008, -1.17874, 2.64526, -2, -1.41425, 0.440485, 2, -0.2361, -2.77212, -2, -1.1482, -1.84828, -0.400157, -0.765857, -0.924432, 1.19969, -0.382929, -0.462216, 2, -0.191464, 0.923845, 1.19969, -0.382929, 1.84769, -0.400157, -0.765857, 2.77153, -2, -1.1482, 0.461629, 2, -0.191464, -2.87138, -2, -0.870987, -1.43598, 0.399765, -0.435787, -0.478661, 2, -0.145654, 0.478074, 2, -0.145654, 2.87079, -2, -0.870987, 1.4354, 0.399765, -0.435787, -2.94244, -2, -0.585552, -0.490407, 2, -0.0980814, 0.48982, 2, -0.0980814, 2.94186, -2, -0.585552, -2.9859, -2, -0.294244, -2.48845, -1.20008, -0.245497, -0.498042, 2, -0.0493343, 0.497455, 2, -0.0493343, 2.48786, -1.20008, -0.245497, 2.98532, -2, -0.294244, -3, -2, 0, -2.00039, -0.400157, 0, -0.500391, 2, 0, 0.499804, 2, 0, 3, -2, 0, -2.9859, -2, 0.293657, -2.48845, -1.20008, 0.24491, -0.498042, 2, 0.0487471, 0.497455, 2, 0.0487471, 2.48786, -1.20008, 0.24491, 2.98532, -2, 0.293657, -2.94244, -2, 0.584965, -0.490407, 2, 0.0974941, 0.48982, 2, 0.0974941, 2.94186, -2, 0.584965, -2.87138, -2, 0.870399, -1.43598, 0.399765, 0.4352, -0.478661, 2, 0.145066, 0.478074, 2, 0.145066, 1.4354, 0.399765, 0.4352, 2.87079, -2, 0.870399, -2.77212, -2, 1.14761, -1.84828, -0.400157, 0.76527, -0.462216, 2, 0.190877, -0.924432, 1.19969, 0.382341, 0.461629, 2, 0.190877, 0.923845, 1.19969, 0.382341, 1.84769, -0.400157, 0.76527, 2.77153, -2, 1.14761, -2.64585, -2, 1.41366, -2.20536, -1.20008, 1.17815, -0.441073, 2, 0.235513, -1.76429, -0.400157, 0.942639, 0.440485, 2, 0.235513, 1.7637, -0.400157, 0.942639, 2.20478, -1.20008, 1.17815, 2.64526, -2, 1.41366, -2.49491, -2, 1.66621, -0.415818, 2, 0.277212, 0.415231, 2, 0.277212, 2.49432, -2, 1.66621, -2.3193, -2, 1.9029, -0.38704, 2, 0.31715, 0.386453, 2, 0.31715, 2.31872, -2, 1.9029, -2.12138, -2, 2.12079, -0.353563, 2, 0.352976, 0.352976, 2, 0.352976, 2.12079, -2, 2.12079, -1.90348, -2, 2.31872, -0.317737, 2, 0.386453, 0.31715, 2, 0.386453, 1.9029, -2, 2.31872, -1.6668, -2, 2.49432, -0.2778, 2, 0.415231, 0.277212, 2, 0.415231, 1.66621, -2, 2.49432, -1.41425, -2, 2.64526, -1.17874, -1.20008, 2.20478, -0.943226, -0.400157, 1.7637, -0.2361, 2, 0.440485, 0.235513, 2, 0.440485, 0.942639, -0.400157, 1.7637, 1.17815, -1.20008, 2.20478, 1.41366, -2, 2.64526, -1.1482, -2, 2.77153, -0.765857, -0.400157, 1.84769, -0.382929, 1.19969, 0.923845, -0.191464, 2, 0.461629, 0.190877, 2, 0.461629, 0.382341, 1.19969, 0.923845, 0.76527, -0.400157, 1.84769, 1.14761, -2, 2.77153, -0.870987, -2, 2.87079, -0.435787, 0.399765, 1.4354, -0.145654, 2, 0.478074, 0.145066, 2, 0.478074, 0.4352, 0.399765, 1.4354, 0.870399, -2, 2.87079, -0.585552, -2, 2.94186, -0.0980814, 2, 0.48982, 0.0974941, 2, 0.48982, 0.584965, -2, 2.94186, -0.294244, -2, 2.98532, -0.245497, -1.20008, 2.48786, -0.0493343, 2, 0.497455, 0.0487471, 2, 0.497455, 0.24491, -1.20008, 2.48786, 0.293657, -2, 2.98532, 0, -2, 3, 0, 2, 0.499804)

[node name="Enemy" type="AnimatableBody3D"]
script = ExtResource("1_sxam2")
material_config = ExtResource("2_mmiis")

[node name="Body" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_mmiis")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_3sg7k")

[node name="VisibleScanArea" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -2.8, 0, 0)
mesh = SubResource("CylinderMesh_enki8")

[node name="VisualDetector" type="Area3D" parent="."]
unique_name_in_owner = true
collision_mask = 2

[node name="CollisionShape3D2" type="CollisionShape3D" parent="VisualDetector"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -2.8, 0, 0)
shape = SubResource("ConvexPolygonShape3D_mmiis")

[connection signal="body_entered" from="VisualDetector" to="." method="_on_visual_detector_body_entered"]
